loopdowhile.LoopDoWhile.scala.error
Compilation error:
LoopDoWhile:4: error: ';' expected but '{' found.
while (! estSurBlanc()){
                       ^